--- a/strukture10b/strukture10b/strukture10b.vcxproj.filters
+++ b/strukture10b/strukture10b/strukture10b.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="strukture10b.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="functions.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="declarations.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
